--- a/src/App.css
+++ b/src/App.css
@@ -12,13 +12,13 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  background: linear-gradient(135deg, #1e1e2e 0%, #2d2d44 100%);
+  background: rgb(225, 241, 249);
 }
 
 header {
   padding: 1rem 2rem;
   text-align: center;
-  background: rgba(0, 0, 0, 0.3);
+  background: rgb(24, 106, 150);
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 }
 
@@ -29,28 +29,30 @@ header h1 {
   text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
 }
 
-header p {
-  margin: 0;
-  color: #aaa;
-  font-size: 0.9rem;
-}
-
 .content-container {
   flex: 1;
   display: flex;
   overflow: hidden;
 }
 
-.dashboard-container {
-  width: 70%;
-  background: rgba(0, 0, 0, 0.2);
+.filters-container {
+  width: 20%;
   border-right: 1px solid rgba(255, 255, 255, 0.1);
   overflow-y: auto;
   padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.dashboard-container {
+  width: 50%;
+  border-right: 1px solid rgba(255, 255, 255, 0.1);
+  overflow-y: auto;
 }
 
 .viewer-container {
   width: 30%;
   position: relative;
-  overflow: hidden;
+  overflow-x: hidden;
 }
