--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
   display: flex;
   flex-direction: column;
   background: rgb(225, 241, 249);
+  color: black;
 }
 
 header {
@@ -36,9 +37,11 @@ header h1 {
 }
 
 .filters-container {
-  width: 20%;
+  width: 15%;
   border-right: 1px solid rgba(255, 255, 255, 0.1);
-  overflow-y: auto;
+  overflow: scroll;
+  scrollbar-color: rgba(130, 132, 133, 1) rgba(255, 255, 255, 0);
+  scrollbar-width: thin;
   padding: 1rem;
   display: flex;
   flex-direction: column;
@@ -46,13 +49,13 @@ header h1 {
 }
 
 .dashboard-container {
-  width: 50%;
+  width: 60%;
   border-right: 1px solid rgba(255, 255, 255, 0.1);
   overflow-y: auto;
 }
 
 .viewer-container {
-  width: 30%;
+  width: 25%;
   position: relative;
   overflow-x: hidden;
 }
